--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,14 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowBackground">@color/white</item>
+    </style>
+    <style name="tint" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:tint">@color/grey_650</item>
+    </style>
     <style name="background" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:background">@color/grey_50</item>
     </style>
