--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -22,7 +22,7 @@
         <item name="android:tint">@color/white</item>
     </style>
     <style name="background" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:background">@color/grey_800</item>
+        <item name="android:background">@color/black</item>
     </style>
     <style name="text" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:textColor">@color/white</item>
