--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,7 @@
         <item name="android:tint">@color/grey_650</item>
     </style>
     <style name="background" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="android:background">@color/grey_50</item>
+        <item name="android:background">@color/white</item>
     </style>
     <style name="text" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:textColor">@color/grey_650</item>
